# clap-stdin

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci-build.yml  publish-crate.yml
examples/: cp.rs  parse_with_serde.rs
src/: file_or_stdin.rs  file_or_stdout.rs  lib.rs  maybe_stdin.rs
tests/: tests.rs
tests/fixtures/: file_or_stdin_optional_arg.rs  file_or_stdin_positional_arg.rs  file_or_stdin_twice.rs  file_or_stdout_append_optional_arg.rs  file_or_stdout_append_positional_arg.rs  file_or_stdout_optional_arg.rs  file_or_stdout_positional_arg.rs  is_stdin.rs  maybe_stdin_optional_arg.rs  maybe_stdin_positional_arg.rs  maybe_stdin_twice.rs  optional_arg.rs  positional_arg.rs  stdin_twice.rs
